[gd_scene load_steps=7 format=3 uid="uid://c4tvedu4xw6sv"]

[ext_resource type="PackedScene" uid="uid://dw0v5gh1l4juy" path="res://plugins/grid_base_inventory_system/scenes/inventory.tscn" id="1_g7g4h"]
[ext_resource type="Script" uid="uid://dccj3ejkbsbv6" path="res://plugins/grid_base_inventory_system/scripts/test_scene.gd" id="1_nd71p"]
[ext_resource type="PackedScene" uid="uid://p50n1klyjo22" path="res://plugins/grid_base_inventory_system/scenes/equipment_slot.tscn" id="3_nd71p"]
[ext_resource type="Texture2D" uid="uid://6itv31rftqpv" path="res://plugins/grid_base_inventory_system/assets/images/ui/boots_background.png" id="4_7ddre"]
[ext_resource type="Texture2D" uid="uid://dgbd8awuhu8tb" path="res://plugins/grid_base_inventory_system/assets/images/ui/weapon_background.png" id="5_qjeyg"]
[ext_resource type="Texture2D" uid="uid://bjn2eod45pyu5" path="res://plugins/grid_base_inventory_system/assets/images/ui/armor_background.png" id="6_3qnke"]

[node name="TestScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nd71p")

[node name="Inventory1" parent="." instance=ExtResource("1_g7g4h")]
layout_mode = 1
anchors_preset = 4
anchor_left = 0.0
anchor_right = 0.0
offset_left = 200.0
offset_top = -400.0
offset_right = 488.0
offset_bottom = 176.0
grow_horizontal = 1
grid_size = 24
inventory_columns = 12
inventory_rows = 24
valid_item_types = Array[int]([0])

[node name="InventoryLabel1" type="Label" parent="Inventory1"]
layout_mode = 0
offset_top = -25.0
offset_right = 30.0
offset_bottom = -2.0
text = "物品数量：999"

[node name="Inventory2" parent="." instance=ExtResource("1_g7g4h")]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_right = 1.0
offset_left = -584.0
offset_top = -400.0
offset_right = -200.0
offset_bottom = 368.0
grow_horizontal = 0
inventory_columns = 12
inventory_rows = 24
valid_item_types = Array[int]([0])

[node name="InventoryLabel2" type="Label" parent="Inventory2"]
layout_mode = 0
offset_top = -26.0
offset_right = 30.0
offset_bottom = -3.0
text = "物品数量：999"

[node name="Inventory3" parent="." instance=ExtResource("1_g7g4h")]
layout_mode = 1
offset_left = 178.0
offset_top = -400.0
offset_right = 370.0
offset_bottom = -208.0
grid_size = 48
inventory_columns = 4
inventory_rows = 4
valid_item_types = Array[int]([8])

[node name="InventoryLabel3" type="Label" parent="Inventory3"]
layout_mode = 0
offset_top = -26.0
offset_right = 30.0
offset_bottom = -3.0
text = "物品数量：999"

[node name="BootsSlot" parent="." instance=ExtResource("3_nd71p")]
layout_mode = 1
offset_left = -170.0
offset_top = -187.0
offset_right = -106.0
offset_bottom = -123.0
background_image = ExtResource("4_7ddre")
inventory_columns = 2
inventory_rows = 2
valid_item_types = Array[int]([5])

[node name="WeaponSlot" parent="." instance=ExtResource("3_nd71p")]
layout_mode = 1
offset_left = -238.0
offset_top = -319.0
offset_right = -174.0
offset_bottom = -191.0
background_image = ExtResource("5_qjeyg")
inventory_columns = 2
inventory_rows = 4
valid_item_types = Array[int]([8])

[node name="ArmorSlot" parent="." instance=ExtResource("3_nd71p")]
layout_mode = 1
offset_left = -170.0
offset_top = -287.0
offset_right = -106.0
offset_bottom = -191.0
background_image = ExtResource("6_3qnke")
inventory_columns = 2
inventory_rows = 3
valid_item_types = Array[int]([2])

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -51.5
offset_top = -142.0
offset_right = 52.5
offset_bottom = -111.0
grow_horizontal = 2
grow_vertical = 0
text = "添加测试物品"
